--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -8,6 +8,12 @@ header {
         justify-content: space-between;
         align-items: center;
 
+        .header-navigation {
+            .btn-header-menu {
+                margin-left: 20px;
+            }
+        }
+
     }
 
 }
